<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_play_list"
        android:title="@string/action_play_list"
        android:orderInCategory="101"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_music"
        android:title="@string/action_music"
        android:orderInCategory="102"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_movie"
        android:title="@string/action_movie"
        android:orderInCategory="103"
        app:showAsAction="never"/>
</menu>
